--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -24,4 +24,18 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+} */
+
+
+body{
+  background-color: #1f2336;
+  background-image: url(../Images/bg.png);
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 100%;
+}
+.container{
+  max-width: 1280px;
+  padding: 0 30px;
+  margin: 0 auto;
 }
