--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,17 +25,22 @@ body {
     )
     rgb(var(--background-start-rgb));
 } */
+@import url("https://fonts.cdnfonts.com/css/helvetica-neue-55");
 
-
-body{
+body {
   background-color: #1f2336;
   background-image: url(../Images/bg.png);
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
 }
-.container{
+.container {
   max-width: 1280px;
   padding: 0 30px;
   margin: 0 auto;
+}
+@media screen and (max-width: 767px) {
+  .container {
+    padding: 0 15px;
+  }
 }
