--- a/src/components/SharedPage/Heading/Heading.style.module.css
+++ b/src/components/SharedPage/Heading/Heading.style.module.css
@@ -5,3 +5,8 @@
   color: white;
   text-transform: capitalize;
 }
+@media screen and (max-width: 767px) {
+  .heading{
+    font-size: 32px;
+  }
+}
