--- a/src/components/HomePage/Projects/Projects.style.module.css
+++ b/src/components/HomePage/Projects/Projects.style.module.css
@@ -10,6 +10,7 @@
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   margin-top: 50px;
+  margin-bottom: 30px;
 }
 .project {
   background: #313552;
