--- a/src/components/HomePage/Projects/Projects.style.module.css
+++ b/src/components/HomePage/Projects/Projects.style.module.css
@@ -46,13 +46,20 @@
   font-weight: 500;
   margin: 10px 0;
 }
-.content p {
+.content span {
   font-size: 16px;
   font-weight: 400;
   color: white;
 }
 .btn {
-  margin: 30px 0;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+.contentBtn {
+  color: white;
+  margin-left: 5px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -78,10 +85,7 @@
     height: 250px !important;
   }
   .content {
-    padding: 10px;
-  }
-  .btn {
-    margin: 15px 0;
+    padding: 20px 10px;
   }
   .allProjects {
     margin-top: 20px;
